Tweaked notification update endpoint
